After-merge fix for merge of MySQL 5.1.41 into MariaDB: Valgrind fixes.

mysql-test/mysql-test-run.pl:
  Fix Valgrind warnings: add more post-shutdown warning suppressions, and revert
  bad previous change.
sql/log_event.cc:
  Manually apply fix for Bug#48340 (basically missing initialisation
  of thd->lex->local_file in Load_log_event::do_apply_event())