mysql-test/mysql-test-run.pl
@@ -223,7 +223,7 @@ my $opt_strace_client;
 our $opt_user = "root";
 
 my $opt_valgrind= 0;
-my $opt_valgrind_mysqld= 0;
+our $opt_valgrind_mysqld= 0;
 my $opt_valgrind_mysqltest= 0;
 my @default_valgrind_args= ("--show-reachable=yes");
 my @valgrind_args;
@@ -3990,6 +3990,8 @@ sub extract_warning_lines ($) {
      qr/unknown variable 'loose-/,
      qr/Now setting lower_case_table_names to [02]/,
      qr/deprecated/,
+     qr/Slave SQL thread retried transaction/,
+     qw/Slave \(additional info\)/,
     );
 
   my $match_count= 0;
